[package]
name = "iosign"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum =  { version = "0.8.4", features = ["multipart"] }
chrono = "0.4.41"
zip = "0.6"
tempfile = "3.6"
percent-encoding = "2.3.1"
regex = "1.11.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs", "cors"] }
uuid = { version = "1.17.0", features = ["v4"] }
libc = "0.2"
plist = "1.8.0"
walkdir = "2.4"
